Prevented all button containers loading on the NoteBoard instead of using css to hide them, only the container on the active note can render. Cleaned up the boardReducer and made updating the board's max z-index value to its own separate action

--- a/src/components/MenuContainer/MenuContainer.module.css
+++ b/src/components/MenuContainer/MenuContainer.module.css
@@ -37,5 +37,19 @@
 }
 
 #MenuButtonContainer {
-    background-color: rgb(61, 61, 61);
+    display: flex;
+    flex-direction: column;
+}
+
+#MenuButtonContainer > button {
+    height: 50%;
+    cursor: pointer;
+    background-color: #3d3d3d;
+    color: white;
+    border: none;
+}
+
+#MenuButtonContainer > button.active {
+    background-color: #242424;
+    text-shadow: white 0 0 1px;
 }
