--- a/src/containers/EditorButtonContainer/EditorButtonContainer.module.css
+++ b/src/containers/EditorButtonContainer/EditorButtonContainer.module.css
@@ -10,6 +10,10 @@
     justify-content: center;
 }
 
+.ButtonWithMenuContainer {
+    width: 61px;
+}
+
 .InlineSubButton {
     padding: none;
     box-sizing: border-box;
