--- a/src/containers/NoteBoard/Note/Note.module.css
+++ b/src/containers/NoteBoard/Note/Note.module.css
@@ -30,9 +30,5 @@
 
 .NoteButtonContainer {
     position: absolute;
-    top: -100px;
-}
-
-.HideButtonContainer {
-    display: none;
+    top: -50px;
 }
